<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences"
	android:key="preferences">
	<PreferenceCategory android:title="@string/wallpaper">
		<de.markusfisch.android.shadereditor.preference.ShaderListPreference
			android:key="shader"
			android:title="@string/shader"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="save_battery"
			android:title="@string/save_battery"
			android:summary="@string/save_battery_summary"
			android:checked="true"
			android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/editor">
		<ListPreference
			android:key="run_mode"
			android:title="@string/run_mode"
			android:entries="@array/run_mode_names"
			android:entryValues="@array/run_mode_values"
			android:defaultValue="1"/>
		<ListPreference
			android:key="update_delay"
			android:title="@string/update_delay"
			android:entries="@array/update_delay_names"
			android:entryValues="@array/update_delay_values"
			android:defaultValue="1000"/>
		<ListPreference
			android:key="text_size"
			android:title="@string/text_size"
			android:entries="@array/text_size_names"
			android:entryValues="@array/text_size_values"
			android:defaultValue="12"/>
		<ListPreference
			android:key="tab_width"
			android:title="@string/tab_width"
			android:entries="@array/tab_width_names"
			android:entryValues="@array/tab_width_values"
			android:defaultValue="2"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="export_tabs"
			android:title="@string/export_tabs"
			android:summary="@string/export_tabs_summary"
			android:checked="false"
			android:defaultValue="false"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="show_insert_tab"
			android:title="@string/show_insert_tab"
			android:summary="@string/show_insert_tab_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="save_on_run"
			android:title="@string/save_on_run"
			android:summary="@string/save_on_run_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="disable_highlighting"
			android:title="@string/disable_highlighting"
			android:summary="@string/disable_highlighting_summary"
			android:checked="false"
			android:defaultValue="false"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="auto_save"
			android:title="@string/auto_save"
			android:summary="@string/auto_save_summary"
			android:checked="false"
			android:defaultValue="true"/>
		<de.markusfisch.android.shadereditor.preference.ShaderListPreference
			android:key="default_new_shader"
			android:title="@string/default_new_shader"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/sensors">
		<ListPreference
			android:key="sensor_delay"
			android:title="@string/sensor_delay"
			android:entries="@array/sensor_delay_names"
			android:entryValues="@array/sensor_delay_values"
			android:defaultValue="Normal"/>
	</PreferenceCategory>
	<PreferenceCategory
			android:key="import_export"
			android:title="@string/import_export">
		<Preference
			android:key="import_from_directory"
			android:title="@string/import_shaders_files"
			android:summary="@string/import_shaders_files_summary"/>
		<Preference
			android:key="export_to_directory"
			android:title="@string/export_shaders_files"
			android:summary="@string/export_shaders_files_summary"/>
	</PreferenceCategory>
</PreferenceScreen>
