<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/insert_tab"
		android:icon="@drawable/ic_keyboard_tab"
		android:title="@string/insert_tab"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/run_code"
		android:icon="@drawable/ic_play_arrow"
		android:title="@string/run_code"
		app:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/toggle_code"
		android:icon="@drawable/ic_visibility"
		android:title="@string/toggle_code"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/undo"
		android:icon="@drawable/ic_undo"
		android:title="@string/undo"
		app:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/redo"
		android:icon="@drawable/ic_redo"
		android:title="@string/redo"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/save_shader"
		android:icon="@drawable/ic_save"
		android:title="@string/save_shader"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/duplicate_shader"
		android:icon="@drawable/ic_file_copy"
		android:title="@string/duplicate_shader"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/add_shader"
		android:icon="@drawable/ic_add"
		android:title="@string/add_shader"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/delete_shader"
		android:icon="@drawable/ic_delete_forever"
		android:title="@string/delete_shader"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/share_shader"
		android:icon="@drawable/ic_share"
		android:title="@string/share_shader"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/update_wallpaper"
		android:icon="@drawable/ic_wallpaper"
		android:title="@string/update_wallpaper"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/add_uniform"
		android:icon="@drawable/ic_arrow_insert"
		android:title="@string/add_uniform"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/load_sample"
		android:icon="@drawable/ic_quick_reference_all"
		android:title="@string/load_sample"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/faq"
		android:icon="@drawable/ic_forum"
		android:title="@string/faq"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/settings"
		android:icon="@drawable/ic_settings"
		android:title="@string/settings"
		app:showAsAction="ifRoom" />
</menu>
