<de.markusfisch.android.shadereditor.widget.TextureParametersView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/texture_parameters"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/texture_minifying"/>
	<Spinner
		android:id="@+id/min"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"/>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/texture_magnification"/>
	<Spinner
		android:id="@+id/mag"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"/>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/texture_wrap_s"/>
	<Spinner
		android:id="@+id/wrap_s"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"/>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/texture_wrap_t"/>
	<Spinner
		android:id="@+id/wrap_t"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"/>
</de.markusfisch.android.shadereditor.widget.TextureParametersView>
