<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">
			<TextView
				android:id="@+id/size_caption"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/texture_size"/>
			<TextView
				android:id="@+id/size"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"/>
			<SeekBar
				android:id="@+id/size_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:progress="7"
				android:max="9"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/texture_name"/>
			<EditText
				android:id="@+id/name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:hint="@string/input_texture_name"
				android:inputType="text"/>
			<android.support.v7.widget.AppCompatCheckBox
				android:id="@+id/should_add_uniform"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:checked="true"
				android:text="@string/should_add_uniform"/>
			<include layout="@layout/widget_texture_parameters"/>
		</LinearLayout>
	</ScrollView>
	<include layout="@layout/progress_view"/>
</FrameLayout>
